Übersetzung: DE / EN
Anzeige des ausgewählten Ordners

--- a/source/code/Soundkey.csproj
+++ b/source/code/Soundkey.csproj
@@ -66,6 +66,12 @@
     <Compile Include="Mp3Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Hauptfenster.de-DE.resx">
+      <DependentUpon>Hauptfenster.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Hauptfenster.en.resx">
+      <DependentUpon>Hauptfenster.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Hauptfenster.resx">
       <DependentUpon>Hauptfenster.cs</DependentUpon>
     </EmbeddedResource>
